--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,3 +1,3 @@
-db-uri = "env:DATABASE_URL"
+db-uri = "postgresql://anonymous@ep-restless-meadow-abc123.us-east-2.aws.neon.tech/neondb?sslmode=require"
 db-schema = "public"
 db-anon-role = "anonymous"
