--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,3 +1,3 @@
-db-uri = "postgresql://anonymous@ep-restless-meadow-abc123.us-east-2.aws.neon.tech/neondb?sslmode=require"
+db-uri = "postgresql://neondb_owner:npg_c3gnhxblim4@ep-restless-meadow-a4rd7zr8-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
 db-schema = "public"
 db-anon-role = "anonymous"
